--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta chartset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="André">
-    <link href="estilo.css" rel="stylesheet" type="text/css">
-    <title>Documento</title>
+    <meta name="description" content="Simplesmente um teste para apreindizado.">
+
+    <link href=" estilo.css " rel="stylesheet " type="text/css ">
+
+    <title>Receita de Cachorro Quente</title>
 </head>
 
 <body>
     <h1>Receita de Cachorro Quente</h1>
-    <img src="hotdog.png" alt="Imagem de cachorro quente">
+    <img src="hotdog.png " alt="Imagem de cachorro quente ">
     <hr>
-    <div id="divisao">
+    <div id="divisao ">
         <h2>Ingredientes:</h2>
         <ul>
             <li>5 Pães franceses</li>
@@ -32,8 +35,5 @@
         <p>Rende 5 porções.</p>
 
 </body>
-<script>
-    window.alert("Veja a página que criei!");
-</script>
 
 </html>
