alterei as informações do rendimento

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li>Mexa por 10 minutos.</li>
         </ol>
         <h3>Redimento:</h3>
-        <p>Rende 5 porções.</p>
+        <p>5 porções.</p>
 
 </body>
 
